cube/apps/heimdall/heimdall_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: default
  annotations:
     traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: heimdall.miles-homelab.org # Change to your desired hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: heimdall
            port:
              number: 80
